tests/ui/traits/const-traits/staged-api-user-crate.stderr
error[E0658]: cannot call conditionally-const associated function `<staged_api::Unstable as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api-user-crate.rs:12:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `staged_api::MyTrait` is not yet stable as a const trait
  --> $DIR/staged-api-user-crate.rs:12:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
help: add `#![feature(unstable)]` to the crate attributes to enable
   |
LL + #![feature(unstable)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
